2016-02-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Correction for double html characters encoding

2016-02-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Migrate backend module to Extbase/Fluid
	* Add composer.json
	* Add missing labels
	* Update version to 4.0.0
	* Resolves #66381: Wrong link generation in mails when config absRefPrefix = /
	* Resolves #66381: Revert Wrong link generation in mails when config absRefPrefix = /

2016-02-17  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Cleanup in CardMailerTask.php
	* [!!!] Rename tables
	* Add table migration script

2016-01-08  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Adjustments to the layout of the Statistics module
	* Adapt frontend plugin to TYPO3 CMS 7

2016-01-07  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Replace extension icons
	* Move template to Resources directory
	* Move plugin to Classes directory
	* Reconfigure the Statistics module
	* Adjustments to language files

2015-12-26  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Delete unused language files

2015-12-25  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Move static templates configuration to TCA overrides

2014-10-20  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Adapt to new version of TYPO3\CMS\Core\Imaging\GraphicalFunctions::combineExec
	* Add missing TCA configuration file tx_srsendcard_sentcard.php
	* Update manual

2014-10-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update version to 3.2.0
	* Fix some Spanish labels
	* Fix reference to .xml language file
	* Remove reference to version of TYPO3 before 6.2
	* Move tasks to Classes/Task folder
	* Migrate references to core classes to namespaced names

2014-03-30  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Add missing label
	* Fix use of deprecated method

2014-03-24  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Move TypoScript configuration to Configuration and Resources folders
	* Move music files to Resources/Public/Audio folder